<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_check"
        android:icon="@drawable/ic_check"
        android:title="@string/action_check"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_format"
        android:icon="@drawable/ic_format"
        android:title="@string/action_format"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_paste"
        android:title="@string/action_paste"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

</menu>
